--- a/package.json
+++ b/package.json
@@ -3,52 +3,47 @@
   "version": "1.10.1",
   "private": true,
   "scripts": {
-    "dev": "cross-env  webpack-dev-server  --config build/webpack.dev.js ",
-    "test": "cross-env  --max_old_space_size=8192  webpack  --config build/webpack.test.js",
-    "build": "cross-env  --max_old_space_size=8192  webpack  --config build/webpack.build.js"
+    "dev": "webpack serve  --config build/webpack.dev.js ",
+    "build": "webpack  --config build/webpack.build.js"
   },
   "dependencies": {
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "core-js": "^3.16.0",
     "react": "^16.8.6",
     "react-dom": "^17.0.1",
     "react-redux": "^5.0.7",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-arrow-functions": "^7.14.5",
+    "@babel/plugin-transform-block-scoping": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "autoprefixer": "^10.0.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.13.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^6.0.3",
-    "css-loader": "^5.0.1",
-    "happypack": "^5.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "os": "^0.1.1",
-    "postcss": "^8.1.10",
-    "postcss-loader": "^4.1.0",
-    "react-refresh": "^0.9.0",
+    "autoprefixer": "^10.3.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
     "sass": "^1.52.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.1",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpackbar": "^4.0.0"
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.47.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.2"
   },
   "homepage": "."
 }
