--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.16.0",
+    "jquery": "^3.6.0",
     "react": "^16.8.6",
     "react-dom": "^17.0.1",
     "react-redux": "^5.0.7",
@@ -21,10 +22,11 @@
     "@babel/plugin-transform-arrow-functions": "^7.14.5",
     "@babel/plugin-transform-block-scoping": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "autoprefixer": "^10.3.1",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
@@ -34,6 +36,7 @@
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "react-refresh": "^0.10.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.2.1",
