--- a/package.json
+++ b/package.json
@@ -16,18 +16,16 @@
     "react-redux": "^5.0.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-arrow-functions": "^7.14.5",
-    "@babel/plugin-transform-block-scoping": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
