--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"react-redux": "^5.0.7",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
-		"regenerator-runtime": "^0.13.9"
+		"regenerator-runtime": "^0.13.9",
+		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
@@ -30,6 +31,7 @@
 		"@types/react": "^18.0.9",
 		"@types/react-dom": "^18.0.5",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/styled-components": "^5.1.25",
 		"autoprefixer": "^10.3.1",
 		"babel-loader": "^8.2.5",
 		"clean-webpack-plugin": "^4.0.0-alpha.0",
