--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "utrailer-ebs",
-  "version": "1.10.1",
-  "private": true,
-  "scripts": {
-    "start": "npm run dev",
-    "dev": "webpack serve  --config config/webpack.dev.js ",
-    "build": "webpack  --config config/webpack.build.js",
+	"name": "utrailer-ebs",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "npm run dev",
+		"dev": "webpack serve --config config/webpack.dev.js ",
+		"build": "webpack  --config config/webpack.build.js",
     "lint": "eslint src/**/*.{js,jsx,vue,ts,tsx} --fix",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "axios": "^0.27.2",
-    "core-js": "^3.16.0",
-    "jquery": "^3.6.0",
-    "react": "^16.8.6",
-    "react-dom": "^17.0.1",
-    "react-redux": "^5.0.7",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.9",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-arrow-functions": "^7.14.5",
-    "@babel/plugin-transform-block-scoping": "^7.14.5",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.17.12",
-    "@babel/preset-typescript": "^7.15.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.25",
+    "prepare": "husky install",
+		"test": "jest"
+	},
+	"dependencies": {
+		"axios": "^0.27.2",
+		"core-js": "^3.16.0",
+		"jquery": "^3.6.0",
+		"react": "^17",
+		"react-dom": "^17.0.1",
+		"react-redux": "^5.0.7",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
+		"regenerator-runtime": "^0.13.9",
+		"styled-components": "^5.3.5"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.14.8",
+		"@babel/core": "^7.15.0",
+		"@babel/plugin-transform-arrow-functions": "^7.14.5",
+		"@babel/plugin-transform-block-scoping": "^7.14.5",
+		"@babel/preset-env": "^7.15.0",
+		"@babel/preset-react": "^7.17.12",
+		"@babel/preset-typescript": "^7.15.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^11",
+		"@types/jest": "^27.5.1",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.5",
+		"@types/react-router-dom": "^5.3.3",
+		"@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "autoprefixer": "^10.3.1",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+		"autoprefixer": "^10.3.1",
+		"babel-loader": "^8.2.5",
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
+		"copy-webpack-plugin": "^9.0.1",
+		"css-loader": "^6.2.0",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.3.2",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -54,24 +57,28 @@
     "eslint-webpack-plugin": "^3.1.1",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
+		"jest": "^28.1.0",
+		"jest-environment-jsdom": "^28.1.0",
+		"jest-transform-stub": "^2.0.0",
+		"postcss": "^8.3.6",
+		"postcss-cli": "^8.3.1",
+		"postcss-loader": "^6.1.1",
+		"postcss-preset-env": "^6.7.0",
     "prettier": "^2.6.2",
-    "react-refresh": "^0.10.0",
-    "sass": "^1.52.1",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.2"
-  },
-  "homepage": ".",
+		"react-refresh": "^0.10.0",
+		"sass": "^1.52.1",
+		"sass-loader": "^13.0.0",
+		"style-loader": "^3.2.1",
+		"ts-jest": "^28.0.3",
+		"ts-loader": "^9.3.0",
+		"typescript": "^4.7.2",
+		"webpack": "^5.47.1",
+		"webpack-cli": "^4.7.2",
+		"webpack-dev-server": "^3.11.2",
+		"webpack-merge": "^5.8.0",
+		"webpackbar": "^5.0.2"
+	},
+	"homepage": ".",
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
       "npm run lint"
