--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 
 		/* Basic Options */
 		// "incremental": true,                         /* Enable incremental compilation */
-		"target": "ES2015" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
+		"target": "ES2016" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
 		"module": "es2015" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
 		"lib": [
 			"ES2020",
@@ -12,7 +12,7 @@
 		] /* Specify library files to be included in the compilation. */,
 		// "allowJs": true,                             /* Allow javascript files to be compiled. */
 		// "checkJs": true,                             /* Report errors in .js files. */
-		"jsx": "preserve" /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */,
+		"jsx": "react" /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */,
 		// "declaration": true,                         /* Generates corresponding '.d.ts' file. */
 		// "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
 		// "sourceMap": true,                           /* Generates corresponding '.map' file. */
@@ -29,7 +29,7 @@
 
 		/* Strict Type-Checking Options */
 		"strict": true /* Enable all strict type-checking options. */,
-		// "noImplicitAny": true,                       /* Raise error on expressions and declarations with an implied 'any' type. */
+		"noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
 		// "strictNullChecks": true,                    /* Enable strict null checks. */
 		// "strictFunctionTypes": true,                 /* Enable strict checking of function types. */
 		// "strictBindCallApply": true,                 /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
@@ -38,9 +38,9 @@
 		// "alwaysStrict": true,                        /* Parse in strict mode and emit "use strict" for each source file. */
 
 		/* Additional Checks */
-		// "noUnusedLocals": true,                      /* Report errors on unused locals. */
-		// "noUnusedParameters": true,                  /* Report errors on unused parameters. */
-		// "noImplicitReturns": true,                   /* Report error when not all code paths in function return a value. */
+		"noUnusedLocals": true /* Report errors on unused locals. */,
+		"noUnusedParameters": true /* Report errors on unused parameters. */,
+		"noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
 		// "noFallthroughCasesInSwitch": true,          /* Report errors for fallthrough cases in switch statement. */
 		// "noUncheckedIndexedAccess": true,            /* Include 'undefined' in index signature results */
 		// "noImplicitOverride": true,                  /* Ensure overriding members in derived classes are marked with an 'override' modifier. */
@@ -52,7 +52,11 @@
 		// "paths": {},                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
 		// "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
 		// "typeRoots": [],                             /* List of folders to include type definitions from. */
-		// "types": [],                                 /* Type declaration files to be included in compilation. */
+		"types": [
+			"node",
+			"jest",
+			"@testing-library/jest-dom"
+		] /* Type declaration files to be included in compilation. */,
 		// "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
 		"esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
 		// "preserveSymlinks": true,                    /* Do not resolve the real path of symlinks. */
