--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "utrailer-ebs",
-  "version": "1.10.1",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack serve  --config config/webpack.dev.js ",
+    "dev": "webpack serve --config config/webpack.dev.js ",
     "build": "webpack  --config config/webpack.build.js",
     "lint": "eslint src/**/*.{js,jsx,vue,ts,tsx} --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.16.0",
     "jquery": "^3.6.0",
-    "react": "^16.8.6",
+    "react": "^17",
     "react-dom": "^17.0.1",
     "react-redux": "^5.0.7",
     "react-router": "^5.2.0",
@@ -29,7 +30,9 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.15.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^11",
+    "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
@@ -54,6 +57,9 @@
     "eslint-webpack-plugin": "^3.1.1",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-transform-stub": "^2.0.0",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^6.1.1",
@@ -63,6 +69,7 @@
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.2.1",
+    "ts-jest": "^28.0.3",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "^5.47.1",
