Chore: 测试自动化jest action

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack serve --config config/webpack.dev.js ",
     "build": "webpack  --config config/webpack.build.js",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "prepare": "husky install",
+    "prepare": "husky install && chmod ug+x .husky/*",
     "test": "jest"
   },
   "dependencies": {
