--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "npm run dev",
     "dev": "webpack serve --config config/webpack.dev.js ",
     "build": "webpack  --config config/webpack.build.js",
-    "lint": "eslint src/**/*.{js,jsx,vue,ts,tsx} --fix",
-    "prepare": "husky install",
+    "lint": "eslint src/**/*.{ts,tsx} --fix",
+    "prepare": "husky install && chmod ug+x .husky/*",
     "test": "jest"
   },
   "dependencies": {
