--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "webpack serve --config config/webpack.dev.js ",
     "build": "webpack  --config config/webpack.build.js",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "prepare": "husky install && chmod ug+x .husky/*",
+    "prepare": "husky install",
     "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.16.0",
     "jquery": "^3.6.0",
+    "postcss-preset-env": "^7.7.1",
     "react": "^17",
     "react-dom": "^17.0.1",
     "react-redux": "^5.0.7",
@@ -37,33 +38,34 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
+    "eslint-config-alloy": "^4.5.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^8.0.1",
-    "lint-staged": "^12.4.2",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-transform-stub": "^2.0.0",
+    "lint-staged": "^12.4.2",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "sass": "^1.52.1",
@@ -71,7 +73,7 @@
     "style-loader": "^3.2.1",
     "ts-jest": "^28.0.3",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
+    "typescript": "^4.7.3",
     "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
