--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd": "^4.21.0",
     "axios": "^0.27.2",
     "core-js": "^3.16.0",
     "jquery": "^3.6.0",
     "react": "^17",
     "react-dom": "^17.0.1",
     "react-redux": "^5.0.7",
-    "react-router": "^5.2.0",
+    "react-router": "^5.3.3",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.9",
     "styled-components": "^5.3.5"
